test/src/e2e_vm_tests/test_programs/should_pass/trait_coherence/trait_coherence_dup/sway_libs/src/lib.sw
library;

use standards::src5::{State};

pub fn _owner() -> State {
    State::Uninitialized
}
