test/src/e2e_vm_tests/test_programs/should_fail/recursive_const_module_over_associated_function/src/main.sw
library;

struct S {}

impl S {
    fn assoc() -> u8 {
        MOD_CONST
    }
}

const MOD_CONST: u8 = S::assoc();